# tsr

./: .clang_complete  .gitignore  CMakeLists.txt  LICENSE
example/: CMakeLists.txt  main.c
include/tsr/: drawing.h  geometry.h  surface.h  target.h  tsr.h
src/: CMakeLists.txt  drawing.c  surface.c  target.c  tsr_private.h
